--- a/package.json
+++ b/package.json
@@ -9,12 +9,26 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@chakra-ui/react": "^2.8.2",
+    "@emotion/react": "^11.11.3",
+    "@emotion/styled": "^11.11.0",
+    "@hookform/resolvers": "^3.3.4",
     "@reduxjs/toolkit": "^2.1.0",
+    "country-state-city": "^3.2.1",
+    "framer-motion": "^11.0.3",
     "next": "14.1.0",
+    "next-cloudinary": "^5.20.0",
     "react": "^18",
     "react-dom": "^18",
+    "react-flying-item": "^1.1.3",
+    "react-hook-form": "^7.49.3",
+    "react-hot-toast": "^2.4.1",
+    "react-icons": "^5.0.1",
     "react-redux": "^9.1.0",
-    "redux-persist": "^6.0.0"
+    "react-toastify": "^10.0.4",
+    "redux-persist": "^6.0.0",
+    "stripe": "^14.14.0",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "@types/node": "^20",
